Work with selenoid